Add empathy game robot, clean up branches

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
       </article>
 
       <article class="rrc-card">
+        <span class="rrc-chip">Live robot</span>
+        <h2>Empathy Game Robot</h2>
+        <p>Help the LLM feel better by responding to its emotional states.</p>
+        <a class="rrc-link" href="robots/empathy-game.html">Play empathy game</a>
+      </article>
+
+      <article class="rrc-card">
         <span class="rrc-chip">Template</span>
         <h2>Blank Robot Shell</h2>
         <p>A clean starter page wired to the shared auth bar and OpenRouter helper.</p>
